<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_weight="1">
        
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	    		android:textSize="20sp"
		    	android:layout_weight="1"
		    	android:text="@string/stu_name"
		    	/>
		    <EditText
		        android:id="@+id/input_name"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:hint="@string/input_name"
		    	android:layout_weight="5"
		    	/>
		</LinearLayout>
		
	 	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	    		android:textSize="20sp"
		    	android:layout_weight="1"
		    	android:text="@string/stu_sex"
		    	/>
		
		    <EditText
		        android:id="@+id/input_sex"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="5"
		    	android:hint="@string/input_sex"
		    	/>
		</LinearLayout>
		
	 	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	    		android:textSize="20sp"
		    	android:layout_weight="1"
		    	android:text="@string/stu_number"
		    	/>
		
		    <EditText
		        android:id="@+id/input_number"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="5"
		    	android:hint="@string/input_number"
		    	/>
		</LinearLayout>
		
	 	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
	    		android:textSize="20sp"
		    	android:layout_weight="1"
		    	android:text="@string/stu_signature"
		    	/>
		
		    <EditText
		        android:id="@+id/input_signature"
		        android:layout_width="match_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_weight="5"
		    	android:hint="@string/input_signature"
		    	/>
		</LinearLayout>
    </LinearLayout>	 
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_weight="0"
	    >
        
	    <LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:gravity="center"
			android:layout_weight="1">
		    <Button 
		        android:id="@+id/btnCancel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel"
		        />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="vertical"
	    	android:gravity="center"
			android:layout_weight="1">
		    <Button 
		        android:id="@+id/btnSave"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/save"
		        />
	    </LinearLayout>
	    
    </LinearLayout>	 	
</LinearLayout>
